# singing-voice-quality-regressor

./: .gitignore  datacrunch-install.sh  dvc.yaml  params.yaml  pyproject.toml
SVQTD/: .gitignore  dev.csv.dvc  seg_time_lists.csv.dvc  test.csv.dvc  train.csv.dvc
data/: .gitignore
metrics/: test.json
metrics/valid/: Back.json  Breathy.json  Chest.json  Front.json  Head.json  Open.json  Vibrato.json
models/: .gitignore
notebooks/: 01 SVQTD dataset exploration.ipynb  02 Cleaned data examination.ipynb  03 Audio data exploration.ipynb  04 Data loading.ipynb
plots/: .gitignore
singing_classifier/: __init__.py  clean.py  etl.py  evaluate.py  filter.py  merge.py  processing.py  train.py
tests/: __init__.py  test_clean.py  test_etl.py  test_filter.py  test_merge.py  test_processing.py  test_singing_classifier.py  test_train.py  util.py
