[tool.poetry]
name = "singing-classifier"
version = "0.1.0"
description = ""
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.1%2Bcpu-cp310-cp310-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cpu/torchaudio-0.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl" }
fastai = "^2.7.10"
dvc = "^2.38.1"
youtube-dl = "^2021.12.17"
pyarrow = "^10.0.1"
fastaudio = { git = "https://github.com/mkouhia/fastaudio.git", branch = "master" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^22.12.0"}
pylint = "^2.15.9"

[tool.pytest.ini_options]
markers = [
    "integration_test: Integration tests (deselect with '-m \"not integration_test\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
